# Price_Chatbot_PLAIWEEK

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/data_access/: connector.py  duckdb_connector.py  schema_catalog.py  sqlite_connector.py
app/llm/: gemini_client.py  insight_generator.py  llm_client.py  sql_generator.py
app/llm/prompts/: copia_prompt.txt  insight_system_prompt copy.txt  insight_system_prompt.txt  sql_system_prompt.txt
app/models/: schemas.py
app/security/: sql_guard.py
app/services/: advisor.py
data/: precios.csv  sku.csv  venta.csv
scripts/: build_duckdb.py
web/: index.html
